# codebase-mentor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  benchmark.py  cli.py  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
code_intelligence/: call_graph.py  code_relationships.py  dependency_graph.py  symbol_extractor.py
ingestion/: chunker.py  file_loader.py  language_detector.py  parser.py
llm/: models.py  prompts.py
memory/: conversation.py
retrieval/: adaptive_retriever.py  bm25.py  graph_retriever.py  hierarchy.py  hybrid_retriever.py  query_classifier.py  query_rewriter.py  reranker.py  vector_store.py
tests/: conftest.py  test_file_loader.py  test_language_detector.py  test_memory.py  test_pipeline_integration.py  test_symbol_extractor.py
