[project]
name = "codebase-mentor"
version = "1.0.0"
description = "AI-powered codebase mentor: a code-intelligence-aware RAG assistant that indexes a repository (AST parsing, call graphs, symbol index) and answers questions about it through hybrid retrieval + an LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["rag", "llm", "code-intelligence", "developer-tools", "gemini", "langchain"]

dependencies = [
    "langchain==1.3.11",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-classic==1.0.8",
    "rank-bm25>=0.2.2,<0.3.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.1.0",
    "faiss-cpu>=1.8.0,<2.0.0",
    "google-genai>=0.5.0",
    "streamlit>=1.38.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "networkx>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
codebase-mentor = "cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["pipeline", "cli", "benchmark"]

[tool.setuptools.packages.find]
include = ["ingestion*", "retrieval*", "code_intelligence*", "llm*", "memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not integration'"
markers = [
    "integration: end-to-end tests that download embedding/reranker models and are excluded from the default fast run (run with `pytest -m integration`).",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
